<resources>
    <string name="FBM_001">Add another word or two. Uncommon words are better.</string>
    <string name="FBM_002">Use a few words, avoid common phrases.</string>
    <string name="FBM_003">No need for symbols, digits, or uppercase letters.</string>
    <string name="FBM_004">"Capitalization doesn't help very much."</string>
    <string name="FBM_005">All-uppercase is almost as easy to guess as all-lowercase.</string>
    <string name="FBM_006">"Reversed words aren't much harder to guess."</string>
    <string name="FBM_007">"Predictable substitutions like '%1$s' instead of 'a' don't help very much."</string>
    <string name="FBM_008">Use a longer keyboard pattern with more turns.</string>
    <string name="FBM_009">Avoid repeated words and characters.</string>
    <string name="FBM_010">Avoid sequences.</string>
    <string name="FBM_012">Avoid dates and years that are associated with you.</string>
    <string name="FBM_013">This is a top-10 common password.</string>
    <string name="FBM_014">This is a top-100 common password.</string>
    <string name="FBM_015">This is a very common password.</string>
    <string name="FBM_016">This is similar to a commonly used password.</string>
    <string name="FBM_017">A word by itself is easy to guess.</string>
    <string name="FBM_018">Names and surnames by themselves are easy to guess.</string>
    <string name="FBM_019">Common names and surnames are easy to guess.</string>
    <string name="FBM_020">Straight rows of keys are easy to guess.</string>
    <string name="FBM_021">Short keyboard patterns are easy to guess.</string>
    <string name="FBM_022">Repeats like >aaa>>are easy to guess.</string>
    <string name="FBM_023">Repeats like >abcabcabc>>are only slightly harder to guess than >abc>.</string>
    <string name="FBM_024">Sequences like abc or 6543 are easy to guess.</string>
    <string name="FBM_025">Recent years are easy to guess.</string>
    <string name="FBM_026">Dates are often easy to guess.</string>
    <string name="FMB_011">Avoid recent years, avoid years that are associated with you.</string>
    <string name="INVITE_DEEP_LINK">api-global-prod.aircloudhome.com</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_to_all_files">Access to all files</string>
    <string name="activateAccount_alert_unableActivateAccount">Unable to activate Account</string>
    <string name="activateAccount_lbl_accountActivated">Account Activated</string>
    <string name="activateAccount_lbl_accountActivatedSuccessfully">Your account has been successfully activated.</string>
    <string name="activateAccount_lbl_emailVerificationCode_Description">"Please enter the OTP (One-Time Password) we've sent to your email address."</string>
    <string name="activateAccount_lbl_mobileVerificationCode_Description">"Please enter the 6 digit verification code we've sent to your mobile number."</string>
    <string name="activateAccount_lbl_pleaseEnterEmailMobileNumber">Please Enter Email/ Mobile Number</string>
    <string name="activateAccount_lbl_pleaseEnterEmailMobileNumber_Description">Please enter your email or mobile number to activate your account.</string>
    <string name="activateAccount_title">Activate Account</string>
    <string name="alert_lbl_canNotStartFrostWashIndoor">Cannot start FrostWash (Indoor)</string>
    <string name="alexa_btn_closed">Close</string>
    <string name="alexa_btn_notnow">Not Now</string>
    <string name="alexa_errorTitle_PermissionDenied">Your airCloud Home account does not have the permission to link with Alexa.</string>
    <string name="alexa_errorTitle_accessDenied">Access Denied!</string>
    <string name="alexa_lbl_ClickAllowToLink">Click \"Allow\" to link your airCloud Home account with alexa.</string>
    <string name="alexa_lbl_aircloudhomeaccountLinked">Your airCloud Home account is linked with Alexa.</string>
    <string name="alexa_lbl_askAccountlinking">Do you want to link your airCloud Home account with Alexa?</string>
    <string name="alexa_lbl_congratulations">Congratulations</string>
    <string name="alexa_lbl_controlAcNow">You can now control your ACs with Alexa.</string>
    <string name="alexa_lbl_linked">Linked with Alexa</string>
    <string name="alexa_lbl_linkwithalexa">Link with Alexa</string>
    <string name="amp_label_copied">Copied To Clipboard</string>
    <string name="amp_label_copy">Copy</string>
    <string name="amp_label_device_id">DEVICE ID</string>
    <string name="amp_label_not_avail">N/A</string>
    <string name="amp_label_user_id">USER ID</string>
    <string name="amp_label_user_info">User Information</string>
    <string name="amplitude">Amplitude</string>
    <string name="android_myAcc_lbl_noContactsSelected">No contacts found</string>
    <string name="android_myAcc_lbl_selectAll">Select All</string>
    <string name="android_myAcc_lbl_unselectAll">Un-select All</string>
    <string name="android_permission_alert_camera">Camera</string>
    <string name="android_permission_alert_deniedMsg">You need to enable \"%1$s\" permission to use this feature</string>
    <string name="android_permission_alert_location">Location</string>
    <string name="android_permission_alert_permissionDenied">Permission Denied</string>
    <string name="android_permission_alert_permissionDeniedAlertDesc">Please allow the App to access the \"%1$s\" by clicking on the Allow button.</string>
    <string name="android_permission_alert_storage">Storage</string>
    <string name="android_permission_btn_allow">Allow</string>
    <string name="android_permission_btn_goToSetting">Go to settings</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="appLaunch_alert_serversAreDown">Our servers are under maintenance</string>
    <string name="appLaunch_btn_getStarted">Get Started</string>
    <string name="appLaunch_lbl_accessAnytimeAnywhere">Access Anytime, Anywhere</string>
    <string name="appLaunch_lbl_accessAnytimeAnywhereDesc">With the airCloud Home app, you can remotely monitor and control your ACs from anywhere in the world at any point of time.</string>
    <string name="appLaunch_lbl_airCloudHome">airCloud Home</string>
    <string name="appLaunch_lbl_intuitiveAndOptimized">Intuitive and Optimized</string>
    <string name="appLaunch_lbl_intuitiveAndOptimizedDesc">You only operate the airCloud Home app when it is necessary, the app will handle the rest.</string>
    <string name="appLaunch_lbl_smartAndEnergyEfficient">Smart &amp; Energy Efficient</string>
    <string name="appLaunch_lbl_smartAndEnergyEfficientDesc">The airCloud Home app provides you with powerful features such as weekly timer to maximize the energy efficiency of your ACs.</string>
    <string name="app_name">airCloud Home</string>
    <string name="common_btn_cancel">Cancel</string>
    <string name="common_btn_save">Save</string>
    <string name="ec_note_select_one_ac">"Note:
Select one indoor unit per outdoor unit to reflect the estimated energy consumption.

In case of multi-split connection, selecting multiple indoor unit for one outdoor unit will lead to duplicate energy calculation."</string>
    <string name="ec_select_ac_to_view">Select AC to view estimated energy consumption</string>
    <string name="energyConsumption_lbl_energyCost">Energy Cost</string>
    <string name="font_sanpro_bold">SansPro-Bold</string>
    <string name="font_sanpro_regular">SansPro-Regular</string>
    <string name="grac_adapter_is_compatible_only">&lt;p>The adapter is compatible only with &lt;font color=#c3002f>2.4 GHz&lt;/font> wireless network.&lt;br>&lt;br>Make sure the &lt;font color=#c3002f>2.4 GHz&lt;/font> wireless network is well activated on your router.&lt;br>&lt;br>In case of dual band router, If a specific SSID is used for the &lt;font color=#c3002f>2.4 GHz&lt;/font> wireless network, connect your smartphone to this specific SSID. If both &lt;font color=#c3002f>2.4&lt;/font> and &lt;font color=#c3002f>5 GHz&lt;/font> wireless network are using the same SSID, just connect your smartphone to this wireless network.&lt;/p></string>
    <string name="menu_item_customerCare">Customer Care</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_holidaymode">Holiday Mode</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_logOut">Log Out</string>
    <string name="menu_item_manageAC">Manage ACs</string>
    <string name="menu_item_manageUser">Manage Users</string>
    <string name="menu_item_myAcc">My Account</string>
    <string name="menu_item_privacyPolicy">Privacy Policy</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_weeklyTimer">Weekly Timer</string>
    <string name="onboard_alert_acAlreadyPaired">This AC has already been paired with your account.</string>
    <string name="onboard_alert_acAlreadyPairedDesc1">"If you don't want to change the existing pairing configuration, please click on the "<b>Quit Pairing process</b> button.</string>
    <string name="onboard_alert_acAlreadyPairedDesc2">If you want to pair this AC with another wireless network, please click on the <b>Select another Wireless Network...</b> button to continue with the pairing process.</string>
    <string name="onboard_alert_acAlreadyPairedNote"><b>Note:</b> If you click on the <b>Select another Wireless Network...</b> button, the <font fgcolor="#c3002f">existing pairing configuration will be erased</font> and replaced by the new paring configuration.</string>
    <string name="onboard_btn_quitPairingprocess">Quit Pairing process</string>
    <string name="onboard_btn_selectAnotherWirelessNw">Select another Wireless Network…</string>
    <string name="onboard_lbl_Note">Note</string>
    <string name="onboard_lbl_ssidColonJch">SSID:</string>
    <string name="serviceRequest_lbl_serviceRequest">Service Request</string>
    <string name="smartFence_lbl_smartFence">Smart-Fence</string>
    <string name="timer_lbl_setTime">Set Time</string>
    <string name="timer_lbl_setTimer">Set Timer</string>
    <string name="timer_lbl_twelveHour">12 hour</string>
    <string name="timer_lbl_twentyFourHour">24 hour</string>
</resources>