<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@android:color/white" android:paddingTop="@dimen/dp_16" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/sp_24" android:textColor="@color/rac_name_oofline_color" android:ellipsize="end" android:gravity="center" android:id="@id/noteTitle" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:text="@string/onboard_lbl_Note" android:maxLines="2" app:fontName="@string/font_sanpro_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/crossImageView" android:padding="@dimen/dp_16" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_grac_cross" app:layout_constraintBottom_toBottomOf="@id/noteTitle" app:layout_constraintEnd_toEndOf="@id/noteTitle" app:layout_constraintTop_toTopOf="@id/noteTitle" />
    <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/sp_18" android:textColor="@color/rac_name_oofline_color" android:ellipsize="end" android:gravity="start" android:id="@id/descriptionText" android:padding="@dimen/dp_16" android:layout_width="@dimen/dp_0" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_8" android:text="@string/grac_adapter_is_compatible_only" app:fontName="@string/font_sanpro_regular" app:layout_constraintEnd_toEndOf="@id/crossImageView" app:layout_constraintStart_toStartOf="@id/noteTitle" app:layout_constraintTop_toBottomOf="@id/crossImageView" />
</androidx.constraintlayout.widget.ConstraintLayout>