<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/alexaLinkedView" android:background="@android:color/white" android:padding="@dimen/dp_16" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/sp_28" android:textColor="@color/color_848484" android:gravity="center" android:id="@id/textLinkedWithAlexaLabel1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_24" android:text="@string/alexa_lbl_linked" app:fontName="@string/font_sanpro_regular" app:layout_constraintTop_toTopOf="parent" />
    <com.jch.racWiFi.customViews.customWidgets.Button android:id="@id/btnLinkedWithAlexaClose" android:layout_width="fill_parent" android:layout_height="@dimen/dp_60" app:fontName="@string/font_sanpro_bold" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/Alexa_Close_Button_Style" />
    <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/sp_24" android:textColor="@color/color_848484" android:gravity="center" android:id="@id/textLinkedWithAlexaLabel2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_54" android:text="@string/alexa_lbl_congratulations" app:fontName="@string/font_sanpro_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textLinkedWithAlexaLabel1" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/alexaLinkedLinearLayout" android:layout_width="fill_parent" android:layout_height="@dimen/dp_0" app:layout_constraintBottom_toTopOf="@id/btnLinkedWithAlexaClose" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textLinkedWithAlexaLabel2">
        <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_logo_aircloudhome_link_alexa" />
        <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/sp_20" android:textColor="@color/color_848484" android:gravity="center" android:id="@id/textLinkedWithAlexaLabel3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_44" android:text="@string/alexa_lbl_aircloudhomeaccountLinked" app:fontName="@string/font_sanpro_regular" />
        <ImageView android:id="@id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_44" android:src="@drawable/ic_logo_alexa" />
        <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/sp_20" android:textColor="@color/color_848484" android:gravity="center" android:id="@id/textLinkedWithAlexaLabel4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_44" android:text="@string/alexa_lbl_controlAcNow" app:fontName="@string/font_sanpro_regular" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>