<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/sp_24" android:textStyle="bold" android:textColor="@color/edit_text_color" android:gravity="center" android:id="@id/textViewSetTime" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_16" android:text="@string/timer_lbl_setTime" app:fontName="@string/font_sanpro_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout" android:background="@drawable/shape_rectangle" android:padding="@dimen/dp_2" android:layout_width="fill_parent" android:layout_height="@dimen/dp_40" android:layout_marginTop="@dimen/dp_16" android:layout_marginStart="@dimen/dp_16" android:layout_marginEnd="@dimen/dp_16" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textViewSetTime">
        <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/sp_16" android:textColor="@color/dark_red" android:gravity="center" android:id="@id/timer12Hour" android:background="@android:color/white" android:layout_width="@dimen/dp_0" android:layout_height="fill_parent" android:text="@string/timer_lbl_twelveHour" android:layout_weight="1.0" app:fontName="@string/font_sanpro_regular" />
        <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/sp_16" android:textColor="@color/black" android:gravity="center" android:id="@id/timer24Hour" android:layout_width="@dimen/dp_0" android:layout_height="fill_parent" android:text="@string/timer_lbl_twentyFourHour" android:layout_weight="1.0" app:fontName="@string/font_sanpro_regular" />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/constraintLayout2" android:background="@drawable/shape_rectangle" android:padding="@dimen/dp_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_10" android:layout_marginStart="@dimen/dp_16" android:layout_marginEnd="@dimen/dp_16" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/linearLayout">
        <TimePicker android:theme="@style/MyTimePickerWidgetStyle" android:id="@id/timerPopUpTimePicker" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:timePickerMode="spinner" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/MyTimePickerWidgetStyle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="@dimen/dp_56" android:layout_marginTop="@dimen/dp_10" android:layout_marginBottom="@dimen/dp_16" android:layout_marginStart="@dimen/dp_16" android:layout_marginEnd="@dimen/dp_16" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/constraintLayout2">
        <com.jch.racWiFi.customViews.customWidgets.Button android:id="@id/btnTimerPopUpCancel" android:layout_width="@dimen/dp_0" android:layout_height="fill_parent" android:text="@string/common_btn_cancel" android:layout_weight="1.0" app:fontName="@string/font_sanpro_bold" style="@style/Generic_Button_Style_With_Border" />
        <com.jch.racWiFi.customViews.customWidgets.Button android:id="@id/btnTimerPopUpSave" android:layout_width="@dimen/dp_0" android:layout_height="fill_parent" android:text="@string/common_btn_save" android:layout_weight="1.0" android:layout_marginStart="@dimen/dp_12" app:fontName="@string/font_sanpro_bold" style="@style/Generic_Button_Style_Solid_Red" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>