<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.jch.racWiFi.customViews.customWidgets.TextView android:gravity="center" android:id="@id/text_view_this_ac_is_paired" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:fontName="@string/font_sanpro_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextView_This_Ac_Is_Paired_Title" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="16.0dip" android:layout_marginBottom="24.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_view_this_ac_is_paired">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.jch.racWiFi.customViews.customWidgets.TextView android:id="@id/text_view_this_ac_is_paired_sub_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/onboard_alert_acAlreadyPaired" android:layout_marginStart="23.0dip" android:layout_marginEnd="23.0dip" app:fontName="@string/font_sanpro_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextView_This_Ac_Is_Paired_Sub_Title" />
            <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/text_size_17dp" android:id="@id/tv_home_router_ssid" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/onboard_lbl_ssidColonJch" android:layout_marginStart="23.0dip" android:layout_marginEnd="23.0dip" app:fontName="@string/font_sanpro_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_view_this_ac_is_paired_sub_title" style="@style/TextView_SSID" />
            <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/text_size_17dp" android:id="@id/text_view_this_ac_is_paired_sub_title_one" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/onboard_alert_acAlreadyPairedDesc1" android:layout_marginStart="23.0dip" android:layout_marginEnd="23.0dip" app:fontName="@string/font_sanpro_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_home_router_ssid" style="@style/TextView_This_Ac_Is_Paired_Sub_Title_One" />
            <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/text_size_17dp" android:id="@id/text_view_this_ac_is_paired_sub_title_three" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/onboard_alert_acAlreadyPairedDesc2" android:layout_marginStart="23.0dip" android:layout_marginEnd="23.0dip" app:fontName="@string/font_sanpro_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_view_this_ac_is_paired_sub_title_one" style="@style/TextView_This_Ac_Is_Paired_Sub_Title_One" />
            <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/text_size_17dp" android:id="@id/text_view_this_ac_is_paired_sub_title_two" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/onboard_alert_acAlreadyPairedNote" android:layout_marginStart="23.0dip" android:layout_marginEnd="23.0dip" app:fontName="@string/font_sanpro_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_view_this_ac_is_paired_sub_title_three" style="@style/TextView_This_Ac_Is_Paired_Sub_Title_Two" />
            <com.jch.racWiFi.customViews.customWidgets.Button android:textColor="@color/textview_color_vd_light" android:id="@id/button_negative" android:background="@drawable/drawable_button_red_border" android:layout_width="0.0dip" android:layout_height="@dimen/button_height_vd" android:layout_marginTop="24.0dip" android:layout_marginBottom="32.0dip" android:text="@string/onboard_btn_quitPairingprocess" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" android:stateListAnimator="@animator/selector_animator" app:fontName="@string/font_sanpro_bold" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/button_positive" style="@style/Button_Negative" />
            <com.jch.racWiFi.customViews.customWidgets.Button android:id="@id/button_positive" android:background="@drawable/drawable_button_red" android:layout_width="0.0dip" android:layout_height="@dimen/button_height_vd" android:layout_marginTop="32.0dip" android:text="@string/onboard_btn_selectAnotherWirelessNw" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" android:stateListAnimator="@animator/selector_animator" app:fontName="@string/font_sanpro_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_view_this_ac_is_paired_sub_title_two" style="@style/Button_Positive" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>