<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_ec_home_0" android:background="@android:color/white" android:paddingTop="@dimen/dp_16" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/include2" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" layout="@layout/toolbar_energy_consumption" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="@dimen/dp_0" android:layout_marginStart="@dimen/dp_32" android:layout_marginEnd="@dimen/dp_32" app:layout_constraintBottom_toTopOf="@id/textView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/include2">
        <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/sp_18" android:textColor="@color/rac_name_oofline_color" android:gravity="center" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dp_20" android:text="@string/ec_select_ac_to_view" app:fontName="@string/font_sanpro_regular" />
        <com.jch.racWiFi.customViews.customWidgets.Button android:id="@id/button_select_acs" android:layout_width="@dimen/dp_286" app:fontName="@string/font_sanpro_bold" style="@style/Button_EC_Select_ACs_Red" />
    </LinearLayout>
    <com.jch.racWiFi.customViews.customWidgets.TextView android:textSize="@dimen/sp_17" android:textColor="@color/colorAccent" android:id="@id/textView" android:background="@color/color_lightest_grey" android:padding="@dimen/dp_16" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/dp_16" android:text="@string/ec_note_select_one_ac" app:fontName="@string/font_sanpro_regular" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>